--- a/apps/client/public/index.html
+++ b/apps/client/public/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Anon</title>
 		<meta charset='utf-8'>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 		<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon.png">
 		<link rel='stylesheet' href='index.css'>
 		<script src='bundle.js'></script>
